# spectacular

./: .gitignore  CITATION.cff  README.md
Plugin/CCTP/: Utils.hs
spectacular/: .gitignore  LICENSE  Makefile  benchmark.sh  cabal.project  spectacular.cabal
spectacular/benchmarks/: HugeLists.hs  ListMonad.hs  Lists.hs  ListsWithHead.hs  MiniList.hs  Octonions.hs  Regex.hs
spectacular/examples/: .HugeLists.hs.swp  Gcd.hs  HugeLists.hs  ListMonad.hs  Lists.hs  ListsWithHead.hs  MiniList.hs  Octonions.hs  Regex.hs
spectacular/exe/: Main.hs
spectacular/src/: Spectacular.hs
spectacular/src/Data/: EGraph.hs
spectacular/src/Spectacular/: Testing.hs  Types.hs  Utils.hs
src/Application/TermSearch/: TermSearch.hs
src/Data/: ECTA.hs
src/Data/ECTA/Internal/: Term.hs
src/Data/ECTA/Internal/ECTA/: Enumeration.hs  Operations.hs
synthspec/: .gitignore  LICENSE  Makefile  cabal.project  synthspec.cabal
synthspec/examples/: HugeLists.hs  ListMonad.hs  Lists.hs  ListsWithHead.hs  Octonions.hs  Regex.hs
synthspec/exe/: Main.hs
synthspec/src/: SynthSpec.hs
synthspec/src/SynthSpec/: Testing.hs  Types.hs  Utils.hs
