cabal-version: 3.0
name: spectacular
build-type: Simple
version: 0.0.1
author: Matthías Páll Gissurarson
maintainer: mpg@mpg.is
synopsis: ECTA-based QuickSpec
description:

  Spectacular is a rewrite of QuickSpec based on the state-of-the-art ECTA (equality-constrained tree automata)
  technique for fun and profit (?).

category: Synthesis
license: MIT
license-file: LICENSE

common deps
  default-language: Haskell2010
  build-depends: base >= 4 && < 5,
                 ghc > 8.10 && < 9,
                 text,
                 containers,
                 compact-coupled-terms,
                 time,
                 QuickCheck >= 2.14 && < 2.15,
                 async,
                 hashable,
                 unordered-containers,
                 random


library
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Spectacular,
    Spectacular.Types,
    Spectacular.Utils,
    Spectacular.Testing


executable spectacular
  import: deps
  hs-source-dirs: exe
  ghc-options: -O2 -threaded -rtsopts
  build-depends: spectacular
  main-is: Main.hs



